Fix menu on mobile and off kiosk

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -151,6 +151,29 @@ img
 .beer-info
   float: right
 
+@media screen and (max-width: 1250px)
+  body
+    font-size: 2.5em
+  article
+    margin: 2em 0
+  .gf
+    width: 45px
+  .qr
+    display: none
+
+@media screen and (max-width:450px)
+  body
+    font-size: 1em
+  .beer-name
+    display: block
+    margin-bottom: 1em
+  article
+    text-align: center
+  .gf
+    transform: translateX(-10px)
+  .logo
+    width: 18vw
+
 header
   h1,
   img
